--- a/.env.sample
+++ b/.env.sample
@@ -4,6 +4,7 @@ API_TRANSACTIONS_KEY = "paste here"
 API_HOLDERS_URI_PROD = "paste here"
 API_HOLDERS_URI_DEV = "paste here"
 API_HOLDERS_RESOURCE = "paste here"
+API_HOLDERS_TOP_HOLDERS_LIMIT = 1000
 
 API_TRANSACTIONS_URI_PROD = "paste here"
 API_TRANSACTIONS_URI_DEV = "paste here"
