--- a/.env.sample
+++ b/.env.sample
@@ -12,4 +12,5 @@ API_TRANSACTIONS_RESOURCE = "paste here"
 API_TRANSACTION_TYPE = "TODO: paste txlist or tokentx"
 
 DEBUG = FALSE
+OUTPUT_DIR_PATH = "./output/"
 USER_AGENT = "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_5) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/50.0.2661.102 Safari/537.36"
