--- a/.env.sample
+++ b/.env.sample
@@ -1,15 +1,15 @@
 API_HOLDERS_KEY = "paste here"
 API_TRANSACTIONS_KEY = "paste here"
 
-API_HOLDERS_URI_PROD = "paste here"
-API_HOLDERS_URI_DEV = "paste here"
-API_HOLDERS_RESOURCE = "paste here"
+API_HOLDERS_URI_PROD = "https://api.ethplorer.io"
+API_HOLDERS_URI_DEV = "https://kovan-api.ethplorer.io"
+API_HOLDERS_RESOURCE = "/getTopTokenHolders/"
 API_HOLDERS_TOP_HOLDERS_LIMIT = 1000
 
-API_TRANSACTIONS_URI_PROD = "paste here"
-API_TRANSACTIONS_URI_DEV = "paste here"
-API_TRANSACTIONS_RESOURCE = "paste here"
-API_TRANSACTION_TYPE = "TODO: paste txlist or tokentx"
+API_TRANSACTIONS_URI_PROD = "https://api.etherscan.io"
+API_TRANSACTIONS_URI_DEV = "https://api-kovan.etherscan.io"
+API_TRANSACTIONS_RESOURCE = "/api?"
+API_TRANSACTION_TYPE = "tokentx"
 API_TRANSACTION_PAGE_SIZE = 10000
 
 DEBUG = FALSE
