--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@ node_modules
 # Output files
 output/*.csv
 
+# Python byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+
 # package logs
 yarn-debug.log*
 yarn-error.log*
