Add note about debugging

--- a/.env.sample
+++ b/.env.sample
@@ -11,6 +11,7 @@ API_TRANSACTIONS_URI_DEV = "https://api-kovan.etherscan.io"
 API_TRANSACTIONS_RESOURCE = "/api?"
 API_TRANSACTION_TYPE = "tokentx"
 API_TRANSACTION_PAGE_SIZE = 10000
+API_TRANSACTION_PAGE_SIZE_DEBUG = 2
 
 DEBUG = FALSE
 OUTPUT_DIR_PATH = "./output/"
