--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ node_modules
 # Output files
 output/*.csv
 output/*.txt
+output/*.json
 
 # Python byte-compiled / optimized / DLL files
 __pycache__/
